--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
         <start-class>org.example.MainBigraphApplication</start-class>
-        <bigraph.version>0.9.6</bigraph.version>
+        <bigraph.version>0.9.7-SNAPSHOT</bigraph.version>
     </properties>
 
     <profiles>
