--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>empty-project-skeleton-bigraphframework</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,7 +22,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
         <start-class>org.example.MainBigraphApplication</start-class>
-        <bigraph.version>1.0.0-SNAPSHOT</bigraph.version>
+        <bigraph.version>1.1.0</bigraph.version>
     </properties>
 
     <profiles>
