--- a/build.gradle
+++ b/build.gradle
@@ -4,23 +4,24 @@ plugins {
 }
 
 group 'org.example'
-version '2.3.3'
+version '2.3.4'
 
 repositories {
+    mavenLocal()
+    mavenCentral()
     maven {
         url 'https://s01.oss.sonatype.org/content/repositories/snapshots'
     }
     maven {
         url 'https://repo.eclipse.org/content/groups/releases/'
     }
-    mavenCentral()
 }
 
 dependencies {
-    implementation 'org.bigraphs.framework:bigraph-core:2.3.3'
-    implementation 'org.bigraphs.framework:bigraph-simulation:2.3.3'
-    implementation 'org.bigraphs.framework:bigraph-visualization:2.3.3'
-    implementation 'org.bigraphs.framework:bigraph-converter:2.3.3'
+    implementation 'org.bigraphs.framework:bigraph-core:2.3.4'
+    implementation 'org.bigraphs.framework:bigraph-simulation:2.3.4'
+    implementation 'org.bigraphs.framework:bigraph-visualization:2.3.4'
+    implementation 'org.bigraphs.framework:bigraph-converter:2.3.4'
     implementation 'org.slf4j:slf4j-api:2.0.9'
     implementation 'org.slf4j:slf4j-nop:2.0.7'
 }
