--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>empty-project-skeleton-bigraphframework</artifactId>
-    <version>2.3.6</version>
+    <version>2.4.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,7 +22,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
         <start-class>org.example.MainBigraphApplication</start-class>
-        <bigraph.version>2.3.6</bigraph.version>
+        <bigraph.version>2.4.0</bigraph.version>
     </properties>
 
     <profiles>
@@ -40,7 +40,7 @@
                                     <goal>shade</goal>
                                 </goals>
                                 <configuration>
-                                    <minimizeJar>true</minimizeJar>
+                                    <minimizeJar>false</minimizeJar>
                                     <generateUniqueDependencyReducedPom>true</generateUniqueDependencyReducedPom>
                                     <finalName>fatJar-${project.build.finalName}</finalName>
                                     <filters>
@@ -53,6 +53,12 @@
                                             </excludes>
                                         </filter>
                                     </filters>
+                                    <transformers>
+                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                            <mainClass>org.example.MainBigraphApplication</mainClass>
+                                        </transformer>
+                                    </transformers>
                                 </configuration>
                             </execution>
                         </executions>
@@ -192,12 +198,12 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.16</version>
+            <version>2.0.17</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.17</version>
         </dependency>
     </dependencies>
 
